# google-ads-api-developer-assistant

./: .cursorrules  customer_id.txt  pyproject.toml
.gemini/: settings.json
saved_code/: ALLIED_BRASS_STRATEGIC_ADS_REPORT.html  ALLIED_BRASS_STRATEGIC_ADS_REPORT.md  PYTHON_MERGE_SETUP_COMPLETE.md  allied_brass_gemini_prompt_playbook.md  analyze_attributes.py  analyze_collections.py  analyze_parent_finish.py  analyze_pmax_placements.py  analyze_product_waste.py  assistant_list_campaigns.py  audit_category_relevance.py  audit_mirror_logic.py  audit_mirror_logic_v2.py  audit_mirror_logic_v3.py  audit_negatives.py  audit_pmax_distribution.py  audit_price_availability.py  audit_revenue_headroom.py  audit_search_efficiency.py  audit_shopping_intent.py  audit_sku_distribution.py  audit_url_integrity.py  calculate_reallocation.py  category_negative_recommendations.txt  deep_dive_redirects.py  export_channel_mix.py  extract_product_performance.py  finalize_rollup.py  map_account_hierarchy.py  md_to_html.py  merge_with_product_mapping.py  negative_keyword_recommendations.txt  process_search_audit.py  search_action_list.txt  search_terms_waste.py  smoke_test.py
